--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Soorena Salari / CV"
 title_separator          : "-"
 name                     : &name "Soorena Salari"
 description              : &description "personal description"
-url                      : https://SoorenaSalari.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://Soorena374.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "SoorenaSalari.github.io"
 
