--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  location         : "Montreal, Canada"
   employer         : "Concordia University"
   uri              : # URL
   email            : "soorena.salari374@gmail.com" 
