--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
 #   - title: "Projects"
 #     url: /projects/
 
-#   - title: "Awards"
-#     url: /awards/
+   - title: "Awards"
+     url: /awards/
 
 
 #  - title: "Blog Posts"
