--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ repository               : "soorenasalari.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "bio.png"
+  name             : "Soorena Salari"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Montreal, Canada"
