--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "soorenasalari.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "bio.png"
+  avatar           : "bio.jpg"
   name             : "Soorena Salari"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
