--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "bio.jpg"
   name             : "Soorena Salari"
   pronouns         : # example: "she/her"  
-  bio              : "Graduate Research Assistant at Concordia University"
+  bio              : "PhD Candidate at Concordia University"
   location         : "Montreal, Canada"
   employer         : "Concordia University"
   uri              : # URL
